Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -2651,6 +2651,11 @@ void WebPageProxy::didReceiveEvent(uint32_t opaqueType, bool handled)
     }
 }
 
+void WebPageProxy::stopResponsivenessTimer()
+{
+    process()->responsivenessTimer()->stop();
+}
+
 void WebPageProxy::voidCallback(uint64_t callbackID)
 {
     RefPtr<VoidCallback> callback = m_voidCallbacks.take(callbackID);
